--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Game</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} Game {% endblock %}
+
+
+{% block page_content %}
     <p id="score-board">점수 : 0</p>
     <p id="less-board">놓친 개수 : 0</p>
     <div class="parent">
@@ -26,6 +21,5 @@
         <div>9</div>
     </div>
 
-    <script src="index.js"></script>
-</body>
-</html>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+{% endblock %}
