[2021.08.01] 1. Flask - MongoDB 연동 2. 회원가입 기능 구현 3. 로그인 기능 구현

--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Game {% endblock %}
+{% block title %} ClickGame {% endblock %}
 
 
 {% block page_content %}
@@ -21,5 +21,6 @@
         <div>9</div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <a href="/logout">로그아웃</a>
+    <script src="{{ url_for('static', filename='js/game.js') }}"></script>    
 {% endblock %}
