--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -14,7 +14,14 @@
             type="text/css"
             href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
         />
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
+    {% block script %}
+    {% endblock %}
 </head>
 <body>
     <div id="main">
