--- a/game/templates/login.html
+++ b/game/templates/login.html
@@ -1,13 +1,43 @@
 {% extends "base.html" %}
-{% block title %} Game {% endblock %}
+{% block title %} ClickGame {% endblock %}
+{% block script %}
+<script>
+    function login(){
+        userId = document.querySelector("#userId").value;
+        userPw = document.querySelector("#userPw").value;
+        $.ajax({
+            url: '/login',
+            type: 'post',
+            data: {
+                'userId': userId,
+                'userPw': userPw
+            },
+            success: function(res) {
+                if(res['result'] == 'success'){
+                    alert("로그인 성공!")
+                    console.log("suc");
+                    window.location.href = '/game'
+                } else if(res['result'] == 'fail pw'){
+                    alert("패스워드를 다시 입력해주세요.")
+                    window.location.reload()
+                } else {
+                    alert("존재하지 않은 ID입니다.")
+                    window.location.reload()
+                }
+            }
 
+        });
+    }
+</script>
+{% endblock %}
 {% block page_content %}
-    <form action="">
-        <label for="id">아이디</label>
-        <input type="text" id="id" name="id">
 
-        <label for="pw">패스워드</label>
-        <input type="password" id="pw" name="pw">
-    </form>
+    <label for="userId">아이디</label>
+    <input type="text" id="userId" name="userId">
 
+    <label for="userPw">패스워드</label>
+    <input type="password" id="userPw" name="userPw">
+
+    <button onclick=login()>로그인하기</button>
+    <a href="/signup">회원가입하기</a>
 {% endblock %}
